# TOME

./: .gitattributes  .gitignore  Dockerfile  README.md  configure  db.py  dbcli  lines  makefile  map.py  monitor  player.py  pyproject.toml  pyvenv.cfg  requirements.txt  test
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: docker.yml  makefile.yml
client/: Cargo.toml
client/src/: main.rs
config/: TOME.toml
config/classes/: Cleric.toml  Fighter.toml  Mage.toml  Monk.toml  Ranger.toml  Warlock.toml
config/commands/: data.py
config/profanity/: en
config/races/: Dragonborn.toml  Dwarf.toml  Elf.toml  Gnome.toml  Half-Orc.toml  Human.toml
defaults/: TOME.toml
defaults/classes/: Barbarian.toml  Bard.toml  Druid.toml  Paladin.toml  Rogue.toml  Sorcerer.toml
defaults/commands/: commands.toml  data.py
defaults/maps/: OVERWORLD.mf
defaults/profanity/: en
defaults/races/: Half-Elf.toml  Halfling.toml  Tiefling.toml
docs/source/: conf.py  index.rst
schemas/account/: 002-add-admin-row.down.sql  005-create-account-privileges-table.down.sql  006-add-warnings-table-and-ban-column.sql
schemas/characters/: 001-create-character-tables.sql  002-add-level-row.sql
server/: Cargo.toml
src/: banners.py  db.py  exceptions.py  main.py  map.py  player.py  sending.py  website.py
src/client/: client.py  game.py  mainmenu.py  telnet.py
src/db/: __init__.py  cli.py  database.db  utils.py
src/tests/: CharacterCreation.py  Gmcp.py  MainMenu.py  __init__.py  __main__.py
src/tome/: __main__.py  character.py  exceptions.py  main.py
src/world/: map.py  (+1 more)
(+45 files in other folders)
